# newprojectChatbotAIprompData

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Housing_Market_Presentation (1).pptx  Housing_Market_Presentation.pptx  Makefile  README.md  codecov.yml  housing_presentation.html  housing_presentation.js  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  streamlit_app.py
.code_quality/: mypy.ini  ruff.toml
.streamlit/: config.toml
conf/: config.yml
conf/data_extraction/: __init__.py
conf/data_preparation/: __init__.py
conf/data_validation/: __init__.py
conf/model_evaluation/: __init__.py
conf/model_serving/: __init__.py
conf/model_train/: __init__.py
conf/model_validation/: __init__.py
data/: README.md
docs/: index.md  paper_review_poster.html
final_housing_intelligence_latex_report/: Accord_depot.tex  Biblio.bib  README.txt  abstract.tex  appendix_code.tex  canva_housing_intelligence_presentation.pptx  chapitre1.tex  chapitre2.tex  chapitre3.tex  chapitre4.tex  generate_canva_pptx.py  generate_pdf_presentation.py  generate_report_assets.py  generate_valid_pptx.py  generated_model_metrics.csv  generated_olap_summary.csv  generated_results.tex  housing_intelligence_25_slides.pptx  introduction.tex  presentation_report_app.tex  rapport.aux  rapport.ist  rapport.out  rapport.tex  streamlit_app.py
final_housing_intelligence_latex_report/_pptx_build/: [Content_Types].xml
notebooks/: README.md  notebook_template.ipynb
src/: README.md
src/us_housing/: __init__.py  paths.py
tests/: test_paths.py
(+59 files in other folders)
